MDEV-38164: Fix the estimates reported by TABLE::key_storage_length()

(Cherry-pick into 12.2: the fix is enabled by default,
 control via @@new_mode=FIX_INDEX_LOOKUP_COST is removed)

They were based on the maximum possible length key length, which
can be much larger than the actual data.

The return value is used by handler::keyread_time(), which is used
to estimate the cost of range access.
This could cause range access not to be picked, even if it uses
the clustered PK and reads about 8% of the table.

The fix is to add KEY::stat_storage_length (next to KEY::rec_per_key) and
have the storage engine fill it in handler::info(HA_STATUS_CONST).

Currently, only InnoDB fills this based on its internal statistics:
index->stat_index_size and ib_table->stat_n_rows.

Also changed:
- In handler::calculate_costs(), use ha_keyread_clustered_time() when
  computing clustered PK read cost, not ha_keyread_time().