sql/sql_class.h
@@ -227,7 +227,7 @@ void old_mode_deprecated_warnings(ulonglong v);
   See sys_vars.cc /new_mode_all_names
 */
 
-#define NEW_MODE_MAX                                                         0
+#define NEW_MODE_MAX                                                0
 
 /* Definitions above that have transitioned from new behaviour to default */
 
