sql/sql_select.cc
@@ -13492,6 +13492,7 @@ static bool create_hj_key_for_table(JOIN *join, JOIN_TAB *join_tab,
   keyinfo->flags= HA_GENERATED_KEY;
   keyinfo->is_statistics_from_stat_tables= FALSE;
   keyinfo->all_nulls_key_parts= 0;
+  keyinfo->stat_storage_length= 0;
   keyinfo->name.str= "$hj";
   keyinfo->name.length= 3;
   keyinfo->rec_per_key= (ulong*) thd->calloc(sizeof(ulong)*key_parts);
@@ -22488,6 +22489,7 @@ bool Create_tmp_table::finalize(THD *thd,
     keyinfo->algorithm= HA_KEY_ALG_UNDEF;
     keyinfo->is_statistics_from_stat_tables= FALSE;
     keyinfo->all_nulls_key_parts= 0;
+    keyinfo->stat_storage_length= 0;
     keyinfo->name= group_key;
     keyinfo->comment.str= 0;
     ORDER *cur_group= m_group;
@@ -22610,6 +22612,7 @@ bool Create_tmp_table::finalize(THD *thd,
     keyinfo->algorithm= HA_KEY_ALG_UNDEF;
     keyinfo->is_statistics_from_stat_tables= FALSE;
     keyinfo->all_nulls_key_parts= 0;
+    keyinfo->stat_storage_length= 0;
     keyinfo->read_stats= NULL;
     keyinfo->collected_stats= NULL;
 
